[gd_scene load_steps=23 format=2]

[ext_resource path="res://ArtWork/Sprites/Player/Nuclear.png" type="Texture" id=1]
[ext_resource path="res://Scripts/PlayerMovement.gd" type="Script" id=2]
[ext_resource path="res://ArtWork/Sprites/Player/LightMask.png" type="Texture" id=3]
[ext_resource path="res://ArtWork/5x7_practical.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Music/shotgun-firing-3-14483.mp3" type="AudioStream" id=5]
[ext_resource path="res://Music/jumping-on-wooden-floor-41234.mp3" type="AudioStream" id=6]
[ext_resource path="res://Music/land2-43790.mp3" type="AudioStream" id=7]
[ext_resource path="res://Music/hurt1.mp3" type="AudioStream" id=8]
[ext_resource path="res://Scenes/Words/pistol-cock-6014.mp3" type="AudioStream" id=9]
[ext_resource path="res://Music/glass-shatter-7-95202.mp3" type="AudioStream" id=10]

[sub_resource type="Animation" id=8]
resource_name = "Attack"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_reload_sound"
}, {
"args": [  ],
"method": "_initialize_idle"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "Dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 31, 32, 33, 33, 33, 33 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_scene"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fall"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Ground"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 28, 29 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_initialize_idle"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_hurt_sound"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("Glass")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_jump_sound"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_sound"
}, {
"args": [  ],
"method": "play_sound2"
} ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 13.5 )

[sub_resource type="DynamicFont" id=11]
outline_size = 1
outline_color = Color( 0.027451, 0.0235294, 0.0235294, 1 )
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 13.5 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -3, 0 )
texture = ExtResource( 1 )
offset = Vector2( 2, -16 )
hframes = 34
region_enabled = true
region_rect = Rect2( 0, 0, 3264, 96 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 8 )
anims/Dead = SubResource( 10 )
anims/Fall = SubResource( 6 )
anims/Ground = SubResource( 7 )
anims/Hit = SubResource( 9 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 5 )
anims/RESET = SubResource( 4 )
anims/Run = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -13.5 )
shape = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -7.0
margin_top = -38.0
margin_right = 15.0
margin_bottom = -27.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/normal_font = SubResource( 11 )
text = "12"
scroll_active = false

[node name="Rotate" type="Node2D" parent="."]

[node name="ShotPos" type="Node2D" parent="Rotate"]
position = Vector2( 13, -7 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -13 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
modulate = Color( 0.121569, 0.964706, 0, 1 )
position = Vector2( 1, -13.5 )
shape = SubResource( 12 )

[node name="ShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="FootStepSound" type="AudioStreamPlayer" parent="."]

[node name="FootStepSound2" type="AudioStreamPlayer" parent="."]

[node name="LandSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Glass" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 5.0

[node name="ReloadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
